Adding login control and debugging